crates/editor-codec-macros/tests/compile_fail/retired_on_struct.stderr
error: retired is only allowed on open enums
 --> tests/compile_fail/retired_on_struct.rs:7:12
  |
7 | pub struct S {
  |            ^
